Add prediction logic to `ModelController` and implement `loadPredictions` in `MachineLearningService` to support querying models with seasons, dates, or game IDs.